📝 Rename flow to facs, removed modality assignment

--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -55,7 +55,8 @@
    "outputs": [],
    "source": [
     "import lamindb as ln\n",
-    "import lnschema_bionty as lb"
+    "import lnschema_bionty as lb\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -460,25 +461,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can further annotate your feature set with modality:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "var_feature_set = file.features.get_feature_set(\"var\")\n",
-    "modalities = ln.Modality.lookup()\n",
-    "var_feature_set.modality = modalities.rna\n",
-    "var_feature_set.save()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "#### Link metadata"
    ]
   },
@@ -579,7 +561,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pbcm68k = ln.dev.datasets.anndata_pbmc68k_reduced()"
+    "pbmc68k = ln.dev.datasets.anndata_pbmc68k_reduced()\n",
+    "pbmc68k"
    ]
   },
   {
@@ -596,7 +579,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pbcm68k.var.index"
+    "pbmc68k.var.head()"
    ]
   },
   {
@@ -612,7 +595,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "validated = lb.Gene.validate(pbcm68k.var.index, lb.Gene.symbol)"
+    "lb.Gene.validate(pbmc68k.var.index, lb.Gene.symbol);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lb.Gene.inspect(pbmc68k.var.index, lb.Gene.symbol);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Standardize symbols and register additional symbols from Bionty:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pbmc68k.var.index = lb.Gene.standardize(pbmc68k.var.index, lb.Gene.symbol)\n",
+    "gene_records = lb.Gene.from_values(pbmc68k.var.index, lb.Gene.symbol)\n",
+    "ln.save(gene_records)"
    ]
   },
   {
@@ -628,7 +638,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pbcm68k_validated = pbcm68k[:, validated].copy()"
+    "validated = lb.Gene.validate(pbmc68k.var.index, lb.Gene.symbol)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pbmc68k_validated = pbmc68k[:, validated].copy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Convert gene symbols into ensembl gene ids:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "records = lb.Gene.filter(id__in=[record.id for record in gene_records])\n",
+    "mapper = pd.DataFrame(records.values_list(\"symbol\", \"ensembl_gene_id\")).set_index(0)[1]\n",
+    "pbmc68k_validated.var.insert(0, \"gene_symbol\", pbmc68k_validated.var.index)\n",
+    "pbmc68k_validated.var.rename(index=mapper, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pbmc68k_validated.var.head()"
    ]
   },
   {
@@ -649,14 +696,14 @@
    "outputs": [],
    "source": [
     "# inspect shows none of the terms are mappable\n",
-    "lb.CellType.inspect(pbcm68k_validated.obs[\"cell_type\"])\n",
+    "lb.CellType.inspect(pbmc68k_validated.obs[\"cell_type\"])\n",
     "\n",
     "# here we search the cell type names from the public ontology and grab the top match\n",
-    "# then add the cell type names from the pbcm68k as synonyms\n",
+    "# then add the cell type names from the pbmc68k as synonyms\n",
     "celltype_bt = lb.CellType.bionty()\n",
     "ontology_ids = []\n",
     "mapper = {}\n",
-    "for ct in pbcm68k_validated.obs[\"cell_type\"].unique():\n",
+    "for ct in pbmc68k_validated.obs[\"cell_type\"].unique():\n",
     "    ontology_id = celltype_bt.search(ct).iloc[0].ontology_id\n",
     "    record = lb.CellType.from_bionty(ontology_id=ontology_id)\n",
     "    mapper[ct] = record.name\n",
@@ -664,7 +711,7 @@
     "    record.add_synonym(ct)\n",
     "\n",
     "# standardize cell type names in the dataset\n",
-    "pbcm68k_validated.obs[\"cell_type\"] = pbcm68k_validated.obs[\"cell_type\"].map(mapper)"
+    "pbmc68k_validated.obs[\"cell_type\"] = pbmc68k_validated.obs[\"cell_type\"].map(mapper)"
    ]
   },
   {
@@ -680,7 +727,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lb.CellType.validate(pbcm68k_validated.obs[\"cell_type\"]);"
+    "lb.CellType.validate(pbmc68k_validated.obs[\"cell_type\"]);"
    ]
   },
   {
@@ -699,7 +746,9 @@
    "outputs": [],
    "source": [
     "file = ln.File.from_anndata(\n",
-    "    pbcm68k_validated, description=\"10x reference pbmc68k\", var_ref=lb.Gene.symbol\n",
+    "    pbmc68k_validated,\n",
+    "    description=\"10x reference pbmc68k\",\n",
+    "    var_ref=lb.Gene.ensembl_gene_id,\n",
     ")"
    ]
   },
@@ -715,23 +764,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "var_feature_set = file.features.get_feature_set(\"var\")\n",
-    "var_feature_set.modality = modalities.rna\n",
-    "var_feature_set.save()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "cell_types = lb.CellType.from_values(pbcm68k_validated.obs[\"cell_type\"], \"name\")\n",
+    "cell_types = lb.CellType.from_values(pbmc68k_validated.obs[\"cell_type\"], \"name\")\n",
     "file.add_labels(cell_types, \"cell_type\")"
    ]
   },
