--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -36,6 +36,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Setup"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -56,15 +63,8 @@
    "source": [
     "import lamindb as ln\n",
     "import lnschema_bionty as lb\n",
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import pandas as pd\n",
+    "\n",
     "ln.track()"
    ]
   },
@@ -79,9 +79,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "tags": [
-     "hide-output"
-    ]
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -387,20 +385,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Register ![](https://img.shields.io/badge/Register-10b981) "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "modalities = ln.Modality.lookup()\n",
     "experimental_factors = lb.ExperimentalFactor.lookup()\n",
-    "species = lb.Species.lookup()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Register ![](https://img.shields.io/badge/Register-10b981) "
+    "species = lb.Species.lookup()\n",
+    "features = ln.Feature.lookup()"
    ]
   },
   {
@@ -428,7 +428,7 @@
    "outputs": [],
    "source": [
     "file = ln.File.from_anndata(\n",
-    "    adata, description=\"Conde22\", var_ref=lb.Gene.ensembl_gene_id\n",
+    "    adata, description=\"Conde22\", field=lb.Gene.ensembl_gene_id, modality=modalities.rna\n",
     ")"
    ]
   },
@@ -477,8 +477,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file.add_labels(species.human, feature=\"species\")\n",
-    "file.add_labels(experimental_factors.single_cell_rna_sequencing, feature=\"assay\")"
+    "file.add_labels(species.human, feature=features.species)\n",
+    "file.add_labels(experimental_factors.single_cell_rna_sequencing, feature=features.assay)"
    ]
   },
   {
@@ -501,10 +501,10 @@
     "tissues = lb.Tissue.from_values(adata.obs.tissue, field=\"name\")\n",
     "donors = ln.Label.from_values(adata.obs[\"donor\"])\n",
     "\n",
-    "file.add_labels(cell_types, feature=\"cell_type\")\n",
-    "file.add_labels(efs, feature=\"assay\")\n",
-    "file.add_labels(tissues, feature=\"tissue\")\n",
-    "file.add_labels(donors, feature=\"donor\")"
+    "file.add_labels(cell_types, feature=features.cell_type)\n",
+    "file.add_labels(efs, feature=features.assay)\n",
+    "file.add_labels(tissues, feature=features.tissue)\n",
+    "file.add_labels(donors, feature=features.donor)"
    ]
   },
   {
@@ -748,7 +748,7 @@
     "file = ln.File.from_anndata(\n",
     "    pbmc68k_validated,\n",
     "    description=\"10x reference pbmc68k\",\n",
-    "    var_ref=lb.Gene.ensembl_gene_id,\n",
+    "    field=lb.Gene.ensembl_gene_id,\n",
     ")"
    ]
   },
@@ -770,7 +770,7 @@
    "outputs": [],
    "source": [
     "cell_types = lb.CellType.from_values(pbmc68k_validated.obs[\"cell_type\"], \"name\")\n",
-    "file.add_labels(cell_types, \"cell_type\")"
+    "file.add_labels(cell_types, features.cell_type)"
    ]
   },
   {
@@ -779,8 +779,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file.add_labels(species.human, feature=\"species\")\n",
-    "file.add_labels(experimental_factors.single_cell_rna_sequencing, feature=\"assay\")"
+    "file.add_labels(species.human, feature=features.species)\n",
+    "file.add_labels(experimental_factors.single_cell_rna_sequencing, feature=features.assay)"
    ]
   },
   {
