--- a/docs/scrna2.ipynb
+++ b/docs/scrna2.ipynb
@@ -309,11 +309,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Concatenate subsetted datasets:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adata_concat = ad.concat(\n",
+    "    [file1_adata_subset, file2_adata_subset],\n",
+    "    label=\"file\",\n",
+    "    keys=[file1.description, file2.description],\n",
+    ")\n",
+    "adata_concat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adata_concat.obs.value_counts()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "tags": [
-     "hide-cell"
+     "hide-output"
     ]
    },
    "outputs": [],
