--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -496,10 +496,10 @@
    },
    "outputs": [],
    "source": [
-    "cell_types = lb.CellType.from_values(adata.obs.cell_type, field=\"name\")\n",
-    "efs = lb.ExperimentalFactor.from_values(adata.obs.assay, field=\"name\")\n",
-    "tissues = lb.Tissue.from_values(adata.obs.tissue, field=\"name\")\n",
-    "donors = ln.Label.from_values(adata.obs[\"donor\"])\n",
+    "cell_types = lb.CellType.from_values(adata.obs.cell_type)\n",
+    "efs = lb.ExperimentalFactor.from_values(adata.obs.assay)\n",
+    "tissues = lb.Tissue.from_values(adata.obs.tissue)\n",
+    "donors = ln.Label.from_values(adata.obs.donor)\n",
     "\n",
     "file.add_labels(cell_types, feature=features.cell_type)\n",
     "file.add_labels(efs, feature=features.assay)\n",
@@ -696,14 +696,14 @@
    "outputs": [],
    "source": [
     "# inspect shows none of the terms are mappable\n",
-    "lb.CellType.inspect(pbmc68k_validated.obs[\"cell_type\"])\n",
+    "lb.CellType.inspect(pbmc68k_validated.obs.cell_type)\n",
     "\n",
     "# here we search the cell type names from the public ontology and grab the top match\n",
     "# then add the cell type names from the pbmc68k as synonyms\n",
     "celltype_bt = lb.CellType.bionty()\n",
     "ontology_ids = []\n",
     "mapper = {}\n",
-    "for ct in pbmc68k_validated.obs[\"cell_type\"].unique():\n",
+    "for ct in pbmc68k_validated.obs.cell_type.unique():\n",
     "    ontology_id = celltype_bt.search(ct).iloc[0].ontology_id\n",
     "    record = lb.CellType.from_bionty(ontology_id=ontology_id)\n",
     "    mapper[ct] = record.name\n",
@@ -711,7 +711,7 @@
     "    record.add_synonym(ct)\n",
     "\n",
     "# standardize cell type names in the dataset\n",
-    "pbmc68k_validated.obs[\"cell_type\"] = pbmc68k_validated.obs[\"cell_type\"].map(mapper)"
+    "pbmc68k_validated.obs.cell_type = pbmc68k_validated.obs.cell_type.map(mapper)"
    ]
   },
   {
@@ -727,7 +727,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lb.CellType.validate(pbmc68k_validated.obs[\"cell_type\"]);"
+    "lb.CellType.validate(pbmc68k_validated.obs.cell_type);"
    ]
   },
   {
@@ -749,6 +749,7 @@
     "    pbmc68k_validated,\n",
     "    description=\"10x reference pbmc68k\",\n",
     "    field=lb.Gene.ensembl_gene_id,\n",
+    "    modality=modalities.rna,\n",
     ")"
    ]
   },
@@ -769,16 +770,8 @@
    },
    "outputs": [],
    "source": [
-    "cell_types = lb.CellType.from_values(pbmc68k_validated.obs[\"cell_type\"], \"name\")\n",
-    "file.add_labels(cell_types, features.cell_type)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "cell_types = lb.CellType.from_values(pbmc68k_validated.obs.cell_type)\n",
+    "file.add_labels(cell_types, features.cell_type)\n",
     "file.add_labels(species.human, feature=features.species)\n",
     "file.add_labels(experimental_factors.single_cell_rna_sequencing, feature=features.assay)"
    ]
