🎨 Hide more outputs

--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -79,7 +79,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "tags": []
+    "tags": [
+     "hide-output"
+    ]
    },
    "outputs": [],
    "source": [
@@ -257,14 +259,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "validated = ln.Feature.validate(adata.obs.columns)"
+    "ln.Feature.validate(adata.obs.columns);"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1 feature is not validated: `\"donor\"`. Let's register it:"
+    "1 feature is not validated: `\"donor\"`. Let's register it:\n",
+    "\n",
+    "```{tip}\n",
+    "\n",
+    "Use `features = ln.Feature.from_df(df)` to bulk create features with types.\n",
+    "```"
    ]
   },
   {
@@ -273,7 +280,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "feature = ln.Feature.from_df(adata.obs.loc[:, ~validated])[0]\n",
+    "feature = ln.Feature(name=\"donor\", type=\"category\")\n",
     "ln.save(feature)"
    ]
   },
@@ -435,7 +442,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "file.save()"
@@ -474,7 +485,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "file.add_labels(species.human, feature=features.species)\n",
@@ -492,7 +507,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "tags": []
+    "tags": [
+     "hide-output"
+    ]
    },
    "outputs": [],
    "source": [
@@ -601,7 +618,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "lb.Gene.inspect(pbmc68k.var.index, lb.Gene.symbol);"
@@ -617,7 +638,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "pbmc68k.var.index = lb.Gene.standardize(pbmc68k.var.index, lb.Gene.symbol)\n",
@@ -635,7 +660,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "validated = lb.Gene.validate(pbmc68k.var.index, lb.Gene.symbol)"
@@ -756,7 +785,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "file.save()"
@@ -766,7 +799,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "tags": []
+    "tags": [
+     "hide-output"
+    ]
    },
    "outputs": [],
    "source": [
