--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -79,7 +79,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "tags": []
+    "tags": [
+     "hide-output"
+    ]
    },
    "outputs": [],
    "source": [
@@ -257,14 +259,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "validated = ln.Feature.validate(adata.obs.columns)"
+    "ln.Feature.validate(adata.obs.columns);"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1 feature is not validated: `\"donor\"`. Let's register it:"
+    "1 feature is not validated: `\"donor\"`. Let's register it:\n",
+    "\n",
+    "```{tip}\n",
+    "\n",
+    "Use `features = ln.Feature.from_df(df)` to bulk create features with types.\n",
+    "```"
    ]
   },
   {
@@ -273,7 +280,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "feature = ln.Feature.from_df(adata.obs.loc[:, ~validated])[0]\n",
+    "feature = ln.Feature(name=\"donor\", type=\"category\")\n",
     "ln.save(feature)"
    ]
   },
@@ -435,7 +442,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "file.save()"
@@ -474,7 +485,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "file.add_labels(species.human, feature=features.species)\n",
@@ -492,14 +507,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "tags": []
+    "tags": [
+     "hide-output"
+    ]
    },
    "outputs": [],
    "source": [
-    "cell_types = lb.CellType.from_values(adata.obs.cell_type, field=\"name\")\n",
-    "efs = lb.ExperimentalFactor.from_values(adata.obs.assay, field=\"name\")\n",
-    "tissues = lb.Tissue.from_values(adata.obs.tissue, field=\"name\")\n",
-    "donors = ln.Label.from_values(adata.obs[\"donor\"])\n",
+    "cell_types = lb.CellType.from_values(adata.obs.cell_type)\n",
+    "efs = lb.ExperimentalFactor.from_values(adata.obs.assay)\n",
+    "tissues = lb.Tissue.from_values(adata.obs.tissue)\n",
+    "donors = ln.Label.from_values(adata.obs.donor)\n",
     "\n",
     "file.add_labels(cell_types, feature=features.cell_type)\n",
     "file.add_labels(efs, feature=features.assay)\n",
@@ -601,7 +618,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "lb.Gene.inspect(pbmc68k.var.index, lb.Gene.symbol);"
@@ -617,7 +638,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "pbmc68k.var.index = lb.Gene.standardize(pbmc68k.var.index, lb.Gene.symbol)\n",
@@ -635,7 +660,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "validated = lb.Gene.validate(pbmc68k.var.index, lb.Gene.symbol)"
@@ -696,14 +725,14 @@
    "outputs": [],
    "source": [
     "# inspect shows none of the terms are mappable\n",
-    "lb.CellType.inspect(pbmc68k_validated.obs[\"cell_type\"])\n",
+    "lb.CellType.inspect(pbmc68k_validated.obs.cell_type)\n",
     "\n",
     "# here we search the cell type names from the public ontology and grab the top match\n",
     "# then add the cell type names from the pbmc68k as synonyms\n",
     "celltype_bt = lb.CellType.bionty()\n",
     "ontology_ids = []\n",
     "mapper = {}\n",
-    "for ct in pbmc68k_validated.obs[\"cell_type\"].unique():\n",
+    "for ct in pbmc68k_validated.obs.cell_type.unique():\n",
     "    ontology_id = celltype_bt.search(ct).iloc[0].ontology_id\n",
     "    record = lb.CellType.from_bionty(ontology_id=ontology_id)\n",
     "    mapper[ct] = record.name\n",
@@ -711,7 +740,7 @@
     "    record.add_synonym(ct)\n",
     "\n",
     "# standardize cell type names in the dataset\n",
-    "pbmc68k_validated.obs[\"cell_type\"] = pbmc68k_validated.obs[\"cell_type\"].map(mapper)"
+    "pbmc68k_validated.obs.cell_type = pbmc68k_validated.obs.cell_type.map(mapper)"
    ]
   },
   {
@@ -727,7 +756,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lb.CellType.validate(pbmc68k_validated.obs[\"cell_type\"]);"
+    "lb.CellType.validate(pbmc68k_validated.obs.cell_type);"
    ]
   },
   {
@@ -749,13 +778,18 @@
     "    pbmc68k_validated,\n",
     "    description=\"10x reference pbmc68k\",\n",
     "    field=lb.Gene.ensembl_gene_id,\n",
+    "    modality=modalities.rna,\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "file.save()"
@@ -765,20 +799,14 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "tags": []
+    "tags": [
+     "hide-output"
+    ]
    },
    "outputs": [],
    "source": [
-    "cell_types = lb.CellType.from_values(pbmc68k_validated.obs[\"cell_type\"], \"name\")\n",
-    "file.add_labels(cell_types, features.cell_type)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "cell_types = lb.CellType.from_values(pbmc68k_validated.obs.cell_type)\n",
+    "file.add_labels(cell_types, features.cell_type)\n",
     "file.add_labels(species.human, feature=features.species)\n",
     "file.add_labels(experimental_factors.single_cell_rna_sequencing, feature=features.assay)"
    ]
