--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -281,7 +281,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "feature = ln.Feature(name=\"donor\", type=\"category\")\n",
+    "feature = ln.Feature(name=\"donor\", type=\"category\", registries=[ln.ULabel])\n",
     "ln.save(feature)"
    ]
   },
@@ -354,7 +354,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Because we didn't mount a [custom schema](https://lamin.ai/docs/schemas) that contains a `Donor` registry, we use the {class}`~lamindb.Label` registry to track donor ids:"
+    "Because we didn't mount a [custom schema](https://lamin.ai/docs/schemas) that contains a `Donor` registry, we use the {class}`~lamindb.ULabel` registry to track donor ids:"
    ]
   },
   {
@@ -363,7 +363,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.Label.validate(adata.obs.donor);"
+    "ln.ULabel.validate(adata.obs.donor);"
    ]
   },
   {
@@ -379,7 +379,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "donors = [ln.Label(name=name) for name in adata.obs.donor.unique()]\n",
+    "donors = [ln.ULabel(name=name) for name in adata.obs.donor.unique()]\n",
     "ln.save(donors)"
    ]
   },
@@ -389,7 +389,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.Label.validate(adata.obs.donor);"
+    "ln.ULabel.validate(adata.obs.donor);"
    ]
   },
   {
@@ -493,8 +493,8 @@
    },
    "outputs": [],
    "source": [
-    "file.add_labels(species.human, feature=features.species)\n",
-    "file.add_labels(experimental_factors.single_cell_rna_sequencing, feature=features.assay)"
+    "file.labels.add(species.human, feature=features.species)\n",
+    "file.labels.add(experimental_factors.single_cell_rna_sequencing, feature=features.assay)"
    ]
   },
   {
@@ -514,15 +514,10 @@
    },
    "outputs": [],
    "source": [
-    "cell_types = lb.CellType.from_values(adata.obs.cell_type)\n",
-    "efs = lb.ExperimentalFactor.from_values(adata.obs.assay)\n",
-    "tissues = lb.Tissue.from_values(adata.obs.tissue)\n",
-    "donors = ln.Label.from_values(adata.obs.donor)\n",
-    "\n",
-    "file.add_labels(cell_types, feature=features.cell_type)\n",
-    "file.add_labels(efs, feature=features.assay)\n",
-    "file.add_labels(tissues, feature=features.tissue)\n",
-    "file.add_labels(donors, feature=features.donor)"
+    "file.labels.add(adata.obs.cell_type, feature=features.cell_type)\n",
+    "file.labels.add(adata.obs.assay, feature=features.assay)\n",
+    "file.labels.add(adata.obs.tissue, feature=features.tissue)\n",
+    "file.labels.add(adata.obs.donor, feature=features.donor)"
    ]
   },
   {
@@ -668,15 +663,7 @@
    },
    "outputs": [],
    "source": [
-    "validated = lb.Gene.validate(pbmc68k.var.index, lb.Gene.symbol)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "validated = lb.Gene.validate(pbmc68k.var.index, lb.Gene.symbol)\n",
     "pbmc68k_validated = pbmc68k[:, validated].copy()"
    ]
   },
@@ -808,10 +795,9 @@
    },
    "outputs": [],
    "source": [
-    "cell_types = lb.CellType.from_values(pbmc68k_validated.obs.cell_type)\n",
-    "file.add_labels(cell_types, features.cell_type)\n",
-    "file.add_labels(species.human, feature=features.species)\n",
-    "file.add_labels(experimental_factors.single_cell_rna_sequencing, feature=features.assay)"
+    "file.labels.add(pbmc68k_validated.obs.cell_type, features.cell_type)\n",
+    "file.labels.add(species.human, feature=features.species)\n",
+    "file.labels.add(experimental_factors.single_cell_rna_sequencing, feature=features.assay)"
    ]
   },
   {
