--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -480,7 +480,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let us first link labels for the entire file:"
+    "Let us first link external labels for the entire file:"
    ]
   },
   {
@@ -501,7 +501,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let us know parse the columns of `adata.obs` for additional metadata:"
+    "Next, we parse the columns of `adata.obs` for additional metadata:"
    ]
   },
   {
