📝 Link metadata -> Register metadata linnks

--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -473,7 +473,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Link metadata"
+    "#### Register metadata links"
    ]
   },
   {
