--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Validate & register scRNA-seq datasets"
+    "# scRNA-seq"
    ]
   },
   {
