--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -330,9 +330,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "tags": [
-     "hide-output"
-    ]
+    "tags": []
    },
    "outputs": [],
    "source": [
