--- a/docs/scrna2.ipynb
+++ b/docs/scrna2.ipynb
@@ -93,7 +93,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.Transform.filter(created_by=users.testuser1).search(\"register scrna\")"
+    "ln.Transform.filter(created_by=users.testuser1).search(\"scrna\")"
    ]
   },
   {
@@ -173,6 +173,15 @@
    "metadata": {},
    "source": [
     "Get file objects:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = ln.File.filter()"
    ]
   },
   {
