💚 Fix cell type query

--- a/docs/scrna2.ipynb
+++ b/docs/scrna2.ipynb
@@ -141,7 +141,7 @@
     "query = ln.File.filter(\n",
     "    experimental_factors=assays.single_cell_rna_sequencing,\n",
     "    species=species.human,\n",
-    "    cell_types=cell_types.cd8_positive_alpha_beta_memory_t_cell,\n",
+    "    cell_types=cell_types.gamma_delta_t_cell,\n",
     ")"
    ]
   },
@@ -173,15 +173,6 @@
    "metadata": {},
    "source": [
     "Get file objects:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "query = ln.File.filter()"
    ]
   },
   {
