--- a/docs/scrna2.ipynb
+++ b/docs/scrna2.ipynb
@@ -181,6 +181,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "query = ln.File.filter()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "file1, file2 = query.list()"
    ]
   },
